<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    tools:context=".ui.activity.Main">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.activity.Main">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btProduct"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:backgroundTint="#fff"
                android:drawableTop="@drawable/ic_product"
                android:paddingTop="25dp"
                android:text="@string/Product"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btStock"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:backgroundTint="#fff"
                android:drawableTop="@drawable/ic_storage"
                android:paddingTop="25dp"
                android:text="@string/Stock"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btWithdraw"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:backgroundTint="#fff"
                android:drawableTop="@drawable/ic_account"
                android:paddingTop="25dp"
                android:text="@string/Profile"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btExit"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:backgroundTint="#fff"
                android:drawableTop="@drawable/ic_exit"
                android:paddingTop="25dp"
                android:text="@string/Exit"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>

